--- a/work.html
+++ b/work.html
@@ -166,7 +166,7 @@
     <section class="work-section">
         <div class="work-item">
             <a href="Projects/StarryNight.html">
-                <img src="SN.png" alt="Project 2">
+                <img src="StarryNightPoster.jpg" alt="Project 2">
                 <h3>Dreams and Dangers:<br> A Starry Night Experience</h3>
                 <p>Blender ~ REAPER ~<br> Unreal Engine ~ Pytorch & ONNX for NST ~<br> Live VR Immersive Experience</p>
             </a>
