--- a/Projects/StarryNight.html
+++ b/Projects/StarryNight.html
@@ -187,7 +187,7 @@
         <!-- Role Description -->
             <p class="role-text">Designer & Developer (Engine: Unreal Engine 5.4)
                 <br>Co-3D Modeler (Blender)
-                <br>Neural Style Transfer Coder (Pytorch, Python, and ONNX)
+                <br>Neural Style Transfer Programmer (Pytorch, Python, and ONNX)
                 <br>Documentor (Storytelling & Scripts)
                 <br>VR Experience
                 <br>Live VR Immersive Experience
