--- a/work.html
+++ b/work.html
@@ -237,7 +237,7 @@
         <div class="work-item">
             <a href="Projects/Extra.html">
                 <img src="Art.png" alt="Project 2">
-                <h3>Art & design</h3>
+                <h3>Art & Design</h3>
                 <p>Canon 77d ~ Adobe Photoshop ~<br>Chalk Pastel ~ Charcoal ~ Procreate</p>
             </a>
         </div>
