--- a/work.html
+++ b/work.html
@@ -236,9 +236,16 @@
         </div>
         <div class="work-item">
             <a href="Projects/Extra.html">
-                <img src="Art.png" alt="Project 2">
-                <h3>Art & Design</h3>
+                <img src="Art.png" alt="Project 1">
+                <h3>Art, Design & Photography</h3>
                 <p>Canon 77d ~ Adobe Photoshop ~<br>Chalk Pastel ~ Charcoal ~ Procreate</p>
+            </a>
+        </div>
+        <div class="work-item">
+            <a href="Projects/dIGITALdESIGN.html">
+                <img src="DD.png" alt="Project 2">
+                <h3>Digital Design</h3>
+                <p>Adobe Creative Cloud ~ Microsoft Suite ~ Canva</p>
             </a>
         </div>
     </section>
