--- a/work.html
+++ b/work.html
@@ -242,7 +242,7 @@
             </a>
         </div>
         <div class="work-item">
-            <a href="Projects/dIGITALdESIGN.html">
+            <a href="Projects/DigitalDesign.html">
                 <img src="DD.png" alt="Project 2">
                 <h3>Digital Design</h3>
                 <p>Adobe Creative Cloud ~ Microsoft Suite ~ Canva</p>
