--- a/Projects/StarryNight.html
+++ b/Projects/StarryNight.html
@@ -231,7 +231,7 @@
             </div>
             <div class="image-row">
                 <img src="StarryNight Pics/3.jpg" alt="Image 1" class="media-item">
-                <img src="StarryNight Pics/4.jpg" alt="Image 2" class="media-item">
+                <img src="StarryNight Pics/4.png" alt="Image 2" class="media-item">
             </div>
             <div class="image-row">
                 <img src="StarryNight Pics/5.jpeg" alt="Image 1" class="media-item">
