--- a/Projects/StarryNight.html
+++ b/Projects/StarryNight.html
@@ -199,6 +199,15 @@
                              <br><br>*This piece will premiere at a showcase produced & held at MiX Center at Arizona State University on Dec. 4, 2024*</p>
 
 
+        <!-- Role Header 1 -->
+        <h2 class="role-header">Showcased:</h2>
+
+        <!-- Role Description 1 -->
+            <p class="role-text">This project was showcased at the MiXhibition 
+                <br>at MiX Center at Arizona State University 
+                <br>on December 4, 2024.
+            </p>
+        
         <!-- Role Header -->
         <h2 class="role-header">Role:</h2>
 
