--- a/Projects/Ersatz.html
+++ b/Projects/Ersatz.html
@@ -221,6 +221,16 @@
             <br><br><br>*For more information & documentation about this project follow this <a href="https://scallese.wixsite.com/ersatzglitch" target="_blank" rel="noopener noreferrer">link</a>*
             <br><br>*This piece premiered at a showcase called "Mash Up Collaboration" produced by Robert Farid Karimi in Katzin Hall at Arizona State University*</p>
 
+        
+        <!-- Role Header 1 -->
+        <h2 class="role-header">Showcased:</h2>
+
+        <!-- Role Description 1 -->
+            <p class="role-text">This project was showcased in Katzin Hall 
+                <br>at Arizona State University 
+                <br>on April 22, 2022.
+            </p>
+        
         <!-- Role Header -->
         <h2 class="role-header">Role:</h2>
 
