--- a/Projects/CulturalPotluck.html
+++ b/Projects/CulturalPotluck.html
@@ -205,9 +205,18 @@
                                 to create an inclusive, wlecoming environment by using new technology to create an immersive experience that drew audience members in to 
                                 learn more about our respective cultures, as well as allow them to feel open to sharing their own, by "breaking the 4th wall" and forcing perspective, so that 
                                 they became the 4th person & closing point in the circle that was out Cultural Potluck.
-            <br><br><br>*This piece premiered at a showcase called "Mash Up 2.0 Collaboration" produced by Robert Farid Karimi in ASU Performing and Media Arts Center at Arizona State University*
         </p>
- 
+
+
+        <!-- Role Header 1 -->
+        <h2 class="role-header">Showcased:</h2>
+
+        <!-- Role Description 1 -->
+        <p class="role-text">This project was showcased at APMAA 
+            <br>at Arizona State University 
+            <br>on April 21, 2023.
+        </p>
+        
          <!-- Role Header -->
          <h2 class="role-header">Role:</h2>
 
