--- a/Projects/AuscultationHallucination.html
+++ b/Projects/AuscultationHallucination.html
@@ -217,6 +217,16 @@
                                 the capacity to influence our understanding of the environment/world we are immersed within. 
                                 <br><br><br>*This piece premiered at a showcase in the School of Music at Arizona State University*</p>
 
+
+        <!-- Role Header 1 -->
+        <h2 class="role-header">Showcased:</h2>
+
+        <!-- Role Description 1 -->
+        <p class="role-text">This project was showcased in Music Hall 
+            <br>at Arizona State University 
+            <br>on April 25, 2023.
+        </p>
+        
         <!-- Role Header -->
         <h2 class="role-header">Role:</h2>
 
