--- a/Projects/CulturalPotluck.html
+++ b/Projects/CulturalPotluck.html
@@ -212,7 +212,7 @@
         <h2 class="role-header">Showcased:</h2>
 
         <!-- Role Description 1 -->
-        <p class="role-text">This project was showcased at APMAA 
+        <p class="role-text">This project was showcased at APMA 
             <br>at Arizona State University 
             <br>on April 21, 2023.
         </p>
