--- a/Projects/CulturalPotluck.html
+++ b/Projects/CulturalPotluck.html
@@ -212,8 +212,8 @@
         <h2 class="role-header">Showcased:</h2>
 
         <!-- Role Description 1 -->
-        <p class="role-text">This project was showcased at APMA 
-            <br>at Arizona State University 
+        <p class="role-text">This project was showcased at MASH UP 0.9875 
+            <br>at APMA at Arizona State University 
             <br>on April 21, 2023.
         </p>
         
