--- a/Projects/Ersatz.html
+++ b/Projects/Ersatz.html
@@ -225,8 +225,8 @@
         <h2 class="role-header">Showcased:</h2>
 
         <!-- Role Description 1 -->
-            <p class="role-text">This project was showcased in Katzin Hall 
-                <br>at Arizona State University 
+            <p class="role-text">This project was showcased at MASH UP 2.0 
+                <br>in Katzin Hall at Arizona State University 
                 <br>on April 22, 2022.
             </p>
         
