--- a/Projects/StarryNight.html
+++ b/Projects/StarryNight.html
@@ -196,6 +196,7 @@
         
         <!-- Intro Text Section -->
         <p class="intro-text">"Dreams and Dangers: A Starry Night Experience"</p>
+                             <br><br>*This piece will premiere at a showcase produced & held at MiX Center at Arizona State University on Dec. 4, 2024*</p>
 
 
         <!-- Role Header 1 -->
@@ -206,7 +207,7 @@
                 <br>at MiX Center at Arizona State University 
                 <br>on December 4, 2024.
             </p>
-        
+
         <!-- Role Header -->
         <h2 class="role-header">Role:</h2>
 
@@ -234,11 +235,12 @@
         <div class="media-section">
             <!-- Image rows with 2 images per row -->
             <div class="image-row">
-                <img src="StarryNight Pics/1.jpg" alt="Image 1" class="media-item">
-                <img src="StarryNight Pics/2.jpg" alt="Image 2" class="media-item">
+                <img src="StarryNight Pics/1.jpg
+                " alt="Image 1" class="media-item">
+                <img src="StarryNight Pics/2.png" alt="Image 2" class="media-item">
             </div>
             <div class="image-row">
-                <img src="StarryNight Pics/3.jpg" alt="Image 1" class="media-item">
+                <img src="StarryNight Pics/3.png" alt="Image 1" class="media-item">
                 <img src="StarryNight Pics/4.png" alt="Image 2" class="media-item">
             </div>
             <div class="image-row">
@@ -247,7 +249,7 @@
             </div>
             <div class="image-row">
                 <img src="StarryNight Pics/7.jpg" alt="Image 1" class="media-item">
-                <img src="StarryNight Pics/8.jpg" alt="Image 2" class="media-item">
+                <img src="StarryNight Pics/8.png" alt="Image 2" class="media-item">
             </div>
             <div class="image-row">
                 <img src="StarryNight Pics/9.jpg" alt="Image 1" class="media-item">
@@ -259,15 +261,15 @@
             </div>
             <div class="image-row">
                 <img src="StarryNight Pics/13.jpg" alt="Image 1" class="media-item">
-                <img src="StarryNight Pics/14.jpg" alt="Image 2" class="media-item">
+                <img src="StarryNight Pics/14.png" alt="Image 2" class="media-item">
             </div>
             <div class="image-row">
-                <img src="StarryNight Pics/15.png" alt="Image 1" class="media-item">
-                <img src="StarryNight Pics/16.png" alt="Image 2" class="media-item">
+                <img src="StarryNight Pics/15.jpg" alt="Image 1" class="media-item">
+                <img src="StarryNight Pics/16.jpg" alt="Image 2" class="media-item">
             </div>
             <div class="image-row">
                 <img src="StarryNight Pics/17.jpg" alt="Image 1" class="media-item">
-                <img src="StarryNight Pics/18.png" alt="Image 2" class="media-item">
+                <img src="StarryNight Pics/18.jpg" alt="Image 2" class="media-item">
             </div>
             <div class="image-row">
                 <img src="StarryNight Pics/19.png" alt="Image 1" class="media-item">
@@ -275,7 +277,7 @@
             </div>
             <div class="image-row">
                 <img src="StarryNight Pics/21.png" alt="Image 1" class="media-item">
-                <img src="StarryNight Pics/22.png" alt="Image 2" class="media-item">
+                <img src="StarryNight Pics/22.jpg" alt="Image 2" class="media-item">
             </div>
             <div class="image-row">
                 <img src="StarryNight Pics/23.png" alt="Image 1" class="media-item">
@@ -286,12 +288,12 @@
                 <img src="StarryNight Pics/26.jpg" alt="Image 2" class="media-item">
             </div>
             <div class="image-row">
-                <img src="StarryNight Pics/27.png" alt="Image 1" class="media-item">
-                <img src="StarryNight Pics/28.png" alt="Image 2" class="media-item">
+                <img src="StarryNight Pics/27.jpg" alt="Image 1" class="media-item">
+                <img src="StarryNight Pics/28.jpg" alt="Image 2" class="media-item">
             </div>
             <div class="image-row">
-                <img src="StarryNight Pics/29.png" alt="Image 1" class="media-item">
-                <img src="StarryNight Pics/30.png" alt="Image 2" class="media-item">
+                <img src="StarryNight Pics/29.jpg" alt="Image 1" class="media-item">
+                <img src="StarryNight Pics/30.jpg" alt="Image 2" class="media-item">
             </div>
         </div>
 
