--- a/Projects/StarryNight.html
+++ b/Projects/StarryNight.html
@@ -192,7 +192,7 @@
     <div class="content-wrapper">
         
         <!-- Header Section -->
-        <h1 class="main-header">Dreams and Dangers:<br>A Starry Night Experience<br>(IN DEVELOPMENT)</h1>
+        <h1 class="main-header">Dreams and Dangers:<br>A Starry Night Experience<br>(CURRENTLY STILL IN DEVELOPMENT)</h1>
         
         <!-- Intro Text Section -->
         <p class="intro-text">"Dreams and Dangers: A Starry Night Experience"</p>
@@ -227,9 +227,19 @@
         <h2 class="role-header">Media:</h2>
 
         <!-- Role Description -->
-            <p class="role-text">~The 
-            <br>~The
-            <br>~The video illustrates </p>
+            <p class="role-text">~The first 2 images depict the poster created and the images taken for marketing the experience. 
+            <br>~The next 2 images depict the pre-production ideas brainstormed to execute the project.
+            <br>~The next 2 images depict the initial design of the “Starry Night” room and the finalized product.
+            <br>~Images 7-8 depict the Main Menu Screen that players first see when entering into the experience.
+            <br>~Images 9-14 depict MoDD Museum's Hall of Visions, which is the 1st museum encountered.
+            <br>~Images 15-22 depict the Gallery of Echoes, where players are free to roam about and interact with any object in the room.
+            <br>~Images 23-24 depict the 9 actions that can be carried out in the Gallery of Echoes to simulate affecting climate change.
+            <br>~Images 25-30 depict the Hall of Whispers, which is the 2nd museum encountered.
+            <br>~Videos 1-3 illustrate full walkthroughs of each portion of the experience.
+            <br>~Videos 4 illustrates the transitions into each room.
+            <br>~Video 5-6 illustrate interactive components.
+            <br>~Video 7-8 illustrate application of the material flow map technique.
+            <br>~Video 9 will illustrate (still in development) post processing application using neural style transfers. </p>
 
         <!-- Media Content Section -->
         <div class="media-section">
@@ -298,6 +308,12 @@
         </div>
 
         <!-- Video Section -->
+            <div class="media-container video-container">
+                <iframe src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <div class="media-container video-container">
+                <iframe src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
             <div class="media-container video-container">
                 <iframe src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
