--- a/Projects/StarryNight.html
+++ b/Projects/StarryNight.html
@@ -195,7 +195,55 @@
         <h1 class="main-header">Dreams and Dangers:<br>A Starry Night Experience<br>(CURRENTLY STILL IN DEVELOPMENT)</h1>
         
         <!-- Intro Text Section -->
-        <p class="intro-text">"Dreams and Dangers: A Starry Night Experience"</p>
+        <p class="intro-text">“Dreams and Dangers: A Starry Night Experience” created a space that allowed players to step 
+                                into a new kind of interactive museum (The Museum of Dreams and Dangers - MoDD Museum). The 
+                                core idea behind this experience was to challenge users' senses of reality when confronting 
+                                real-life situations by initially placing them in a realistic situation that quickly altered 
+                                into a surrealistic one they were able to manipulate and navigate within. The objective of 
+                                this project was to raise awareness about air pollution utilizing VR, a strong storyline, and 
+                                Van Gogh's Starry Night painting. Technical implementations in this piece include: PCG, 3D Modeling, 
+                                Designing images, creating MetaHumans, Dissolution of surfaces, Grabbable objects, Level Sequencers, 
+                                Flow maps, and Audio Engineering.
+                        <br><br>When you get into the museum, you will notice 9 paintings hung on the wall. Each painting is an abstract 
+                                representation of one of the top 10 contributing factors to air pollution (whether that be negatively or 
+                                positively). In this experience, I chose 5 actions that negatively affect air pollution (smoking, chemical 
+                                emissions, starting a fire, industrial emissions, and personal transportation), and 4 actions that positively 
+                                affect air pollution (recycle, public transit, turning lights off, and planting a tree). Each action has a 
+                                respective color with it that corresponds to the severity of damage that action contributes to air pollution. 
+                                Planting Trees is Vibrant Green, Recycling is Green and Blue, Turning Off Lights is a Vibrant Rainbow of Colors, 
+                                Public Transit is pale green and yellow, Smoking is yellow, Personal Transportation is grey, Starting a Fire is red, 
+                                Chemical Emissions is Purple, and Industrial Emissions is Maroon. The colors chosen are the actual colors that the 
+                                atmosphere changes to when their respective action is done. The order of the actions and their respective colors is 
+                                a scale that goes from factors helping the environment the most to factors inducing the most harm to the environment. 
+                        <br><br>The first space was a completely dark room with an information panel floating in front of the player upon putting on 
+                                the headset.  This helped introduce players into the experience and inform them of the controls they will need to utilize.
+                        <br><br>Welcome to The Hall of Visions at MoDD (The Museum of Dreams and Dangers); we're so glad you chose to join our experience 
+                                today! I hope you're ready for an air-y fun adventure because you're about to enter a world that you probably don't think 
+                                about often… but trust me, it's quite breathe-taking. ~ In this initial space, players are invited to roam around the Hall 
+                                of Visions and look at the paintings on display. Flow maps were added to the texture of the materials of each painting in 
+                                attempt to mesmerize the observer. The Hall of Visions got its name because the paintings in this hall are “visions” or 
+                                premonitions of what is to come in the next part of the experience. Each painting is an abstract representation of an action 
+                                that the player could carry out in the following Gallery. 
+                        <br><br>Welcome to MoDD's Gallery of Echoes! This will be unlike any other gallery tour you've been on! Here you don't just view the 
+                                art, you BECOME the art, and the art, in turn, becomes entwined with you. You are the artist, and the space, your living canvas. 
+                                Are you ready to paint with both beauty and consequences? You get to choose the objects you wish to interact with in this space. 
+                                Don't be afraid to be genuinely yourself and make bold choices. Be careful though, your artistic risks may have unalterable consequences 
+                                in this sentient masterpiece. Before you begin, take a look around at your initial canvas and say goodbye because you will never be 
+                                able to return it to this condition ever again. Take a breath… and van Gogh! ~ In this space, players are invited to interact with 
+                                any object they choose within the Gallery of Echoes. The 9 paintings from the museum depict 9 actions players could do to alter the 
+                                environment around them. These actions were smoking, driving a car, carpooling on the train, starting a fire, recycling, increasing 
+                                chemical emissions, increasing industrial emissions, turning lights off, and planting a tree. As players interacted with objects, 
+                                their actions caused positive and negative effects on the atmosphere around them, which was seen using post-processing, neural style 
+                                transfers developed in ONNX. Each action physically altered the environment around them. The Gallery of Echoes got its name because 
+                                each action that was carried out caused an unalterable ripple affect or “Echo” within the Gallery. 
+                        <br><br>Welcome back! Looks like you may have left a bigger trace than we had hoped! Don't fret; while we attempt to clean up the mess you made, 
+                                feel free to roam around the Hall of Whispers again and interact with the paintings to learn more about the history of air pollution! 
+                                You may also exit MoDD at this time if you wish! ~ Did you catch that??? You are not in the Hall of Whispers. In this space, players are 
+                                invited to roam around the museum again. This time they are prompted to interact with the paintings. When they do, the original paintings 
+                                on the wall seamlessly dissolve into a realistic depiction of environments positively or negatively affected by climate change that was 
+                                caused by human actions. A more in-depth description about the history of air pollution by each action is also narrated to the players 
+                                when they interact with each respective painting. 
+        </p>
 
 
         <!-- Role Header 1 -->
