--- a/Projects/StarryNight.html
+++ b/Projects/StarryNight.html
@@ -328,10 +328,11 @@
             <br>~The PDFs are the Design & narration Scripts for the Experience.
             <br>~Videos 1-3 illustrate full walkthroughs of each portion of the experience.
             <br>~Videos 4 illustrates the transitions into each room.
-            <br>~Video 5-6 illustrate interactive components.
-            <br>~Video 7-8 illustrate application of the material flow map technique.
-            <br>~Video 9 will illustrate (still in development) post processing application using neural style transfers. </p>
-
+            <br>~Video 5 illustrates interactive components.
+            <br>~Videos 6-7 illustrate application of the material flow map technique.
+            <br>~Video 8 will illustrates (still in development) post processing application using neural style transfers. </p>
+        
+        
         <!-- Media Content Section -->
         <div class="media-section">
             <!-- Image rows with 2 images per row -->
